# metax

./: ChangeLog  Dockerfile  Doxyfile  LICENSE  README  config.xml  makefile
acceptance_tests/add_friend_test/: config1.xml
acceptance_tests/check_no_local_cache/: config2.xml
acceptance_tests/copy_encrypted_content_with_one_data_copy_count_with_one_peer/: config1.xml
acceptance_tests/copy_encrypted_content_with_one_data_copy_count_with_one_peer_with_no_local/: run_test.sh
acceptance_tests/copy_encrypted_content_with_one_peer/: config1.xml
acceptance_tests/copy_encrypted_content_with_three_peers_star_1_with_no_local/: run_test.sh
acceptance_tests/copy_non_encrypted_content_with_one_data_copy_count_with_one_peer/: run_test.sh
acceptance_tests/copy_non_encrypted_content_with_one_data_copy_count_with_one_peer_with_no_local/: run_test.sh
acceptance_tests/copy_non_encrypted_content_with_one_peer/: run_test.sh
acceptance_tests/copy_non_encrypted_content_with_three_peers_star_1_with_no_local/: config4.xml
acceptance_tests/device_json_test_for_copy_request_with_no_peer/: config.xml
acceptance_tests/device_json_test_for_save_non_encrypted_content_with_one_peer/: run_test.sh
acceptance_tests/device_json_test_for_update_non_encrypted_content_with_one_peer/: config1.xml
acceptance_tests/final_user_json_encrypt_test1/: run_test.sh
acceptance_tests/full_sync_blocking_test_for_delete_request_with_one_peer/: config1.xml  run_test.sh
acceptance_tests/full_sync_blocking_test_for_get_request_with_one_peer/: run_test.sh
acceptance_tests/full_sync_blocking_test_for_update_request_with_one_peer/: run_test.sh
acceptance_tests/full_sync_test_for_copy_request_with_one_peer/: run_test.sh
acceptance_tests/full_sync_test_for_update_request_with_one_peer/: run_test.sh
acceptance_tests/get_encrypted_content_with_one_peer_with_one_chunk/: run_test.sh  user_json_info1.json
acceptance_tests/get_friend_list_test/: config.xml
acceptance_tests/get_non_encrypted_content/: run_test.sh
acceptance_tests/negative_get_encrypted_file/: config1.xml  config2.xml
acceptance_tests/negative_get_with_not_valid_uuid/: run_test.sh
acceptance_tests/negative_save_test_with_no_peers_with_no_local/: run_test.sh
acceptance_tests/negative_share_without_uuid/: config1.xml  run_test.sh
acceptance_tests/negative_test_with_no_request_type/: run_test.sh
acceptance_tests/online_offline_test_2/: config1.xml  run_test.sh
acceptance_tests/register_listener/: websocket_client.js
acceptance_tests/save_encrypted_content_multiple_with_no_peers/: run_test.sh
acceptance_tests/save_encrypted_content_multiple_with_peers/: config.xml  run_test.sh
acceptance_tests/save_encrypted_content_parallel/: run_test.sh
acceptance_tests/save_encrypted_content_with_one_data_copy_count_with_one_peer_with_no_local/: run_test.sh
acceptance_tests/save_encrypted_empty_content/: config1.xml
acceptance_tests/save_in_non_localhost/: config_non_localhost_save_true.xml  run_test.sh
acceptance_tests/save_non_encrypted_content_with_no_peers/: run_test.sh
acceptance_tests/save_non_encrypted_file_with_no_peers/: run_test.sh
android/: README.md
android/metax/app/: CMakeLists.txt  build.gradle  build.gradle_ani  fabric.properties  proguard-rules.pro
android/metax/app/src/androidTest/java/am/leviathan/metax/: ExampleInstrumentedTest.java
android/metax/app/src/main/: AndroidManifest.xml  marsboard_readme.txt
android/metax/app/src/main/assets/: 035bc641-6721-45ab-a0cf-6d8f1ce92ecb  1e0e53f7-2f3d-4680-bba6-bc35c0ad35c5  30df1c03-ca22-4b27-9093-25932b8f5f79  47c1d659-0589-49bc-8340-e274a661edf6  config.xml  f7fc6978-6d99-4b0f-af00-fbc8581fae4d
android/metax/app/src/main/cpp/: Application.mk
android/metax/app/src/main/cpp/src/doc/: LeviathanEstimations.ods
android/metax/app/src/main/cpp/src/metax/: backup.cpp  configuration_manager.cpp  hop.cpp  protocols.hpp  router.cpp  socket_acceptor.txx  socket_reactor.hpp  wallet.cpp  wallet.hpp
android/metax/app/src/main/cpp/src/metax_web_api/: db_request_handler.hpp  email_sender.hpp  http_server_app.hpp  web_request_handler_factory.cpp
android/metax/app/src/main/cpp/src/platform/: db_json.hpp  utils.cpp
android/metax/app/src/main/java/am/leviathan/metax/: MainActivity.java  StartMetaxService.java  Updater.java
android/metax/app/src/main/java/am/leviathan/metax/BroadcastReceivers/: Alarm.java  BootupReceiver.java  StartMetaxReceiver.java
android/metax/app/src/main/jni/: Android.mk  metax_web_api.cpp
android/metax/app/src/main/jni/src/doc/: footer.html  router.txt  use_cases.ods
android/metax/app/src/main/jni/src/metax/: hop.hpp  link.cpp  link_peer.hpp  socket_acceptor.hpp  socket_reactor.cpp  ssl_password_handler.hpp
android/metax/app/src/main/jni/src/metax_web_api/: checked_web_request_handler_factory.hpp  configuration_handler.hpp  default_request_handler.cpp  http_server.cpp  makefile
android/metax/app/src/main/jni/src/platform/: db_manager.hpp  fifo.hpp  fifo.txx  makefile
android/metax/app/src/main/jni/src/platform_test/: adder_task.cpp  data_transmission_loop_task.cpp  makefile
android/metax/app/src/main/res/layout/: activity_main.xml
android/metax/app/src/main/res/values/: strings.xml
android/metax/app/src/test/java/am/leviathan/metax/: ExampleUnitTest.java
docs/: 1120_use_cases_leviathan_0.3_1.odt  Leviathan_Platform_Description.odt  The_Philosophy_of_Leviathan.odp  jenkins_jobs_running_do_not_shut_down.odt  leviathan_metax_api.odt  leviathan_whitepaper.odt  metax_testing_instructions.odt  tech_paper_on_metax.txt
mkf/: Doxyfile  clean.mk  compile.mk  definitions.mk  help.mk  install.mk  link.mk  preconditions.mk  setup.mk  test.mk
test_utils/: expected_fail.mk  functions.sh  valgrind_report.sh  valgrind_report_html.sh  ws_for_sync_finished.js
utils/: actions.js  actions.json  copy_actions_nodes.js  delete_tmp_tmp_if_greater_1GB.sh  make_self_signed_certificate.sh  metax_update.sh  migrate.js  old_new_metax_converter.sh  old_to_new.js  run_test.sh  update_to_new_metax.js  user.json
windows/: readme.txt
(+622 files in other folders)
